src/main/java/com/example/error/PromoStatus.java
package com.example.error;

public enum PromoStatus {

    NOT_EXIST, NOT_START, ON_GOING, HAVE_DONE
}
